# StrategyCPPAtividade

./: CMakeLists.txt  main.cpp
include/: Arma.h  Batalha.h  Personagem.h  StatusEffect.h  Utils.h
include/armas/: AdagaSombria.h  ArcoElfico.h  CajadoArcano.h  EspadaLonga.h  LaminaSagrada.h  MachadoGuerra.h
include/enums/: Classe.h  TipoArma.h
